packages/toolkit/components/details/_details.scss
/* ==========================================================================
   COMPONENTS / #DETAILS
   ========================================================================== */

/**
 * Details component.
 *
 * Original code taken from GDS (Government Digital Service)
 * https://github.com/alphagov/govuk-frontend
 *
 * 1. N/A
 * 2. Make the focus outline shrink-wrap the text content of the summary
 * 3. Absolutely position the marker against this element
 * 3. Allow for absolutely positioned marker and align with disclosed text
 * 4. Only underline the text, not the arrow
 * 5. Remove the default details marker so we can style our own consistently and
 *    ensure it displays in Firefox
 * 6. Custom padding to left align the details text with the summary
 */

.ofh-details {
  @include ofh-responsive-margin(16, 'bottom');
  @include ofh-typography-responsive('paragraph-md');

  display: flex;
  flex-direction: column;
  gap: 0;
  align-items: flex-start;
}

.ofh-details__summary {
  align-items: center;
  background: transparent;
  color: $ofh-color-foreground-link-default;
  cursor: pointer;
  display: inline-flex;
  gap: $ofh-size-8;
  max-width: 100%;
  position: relative;
  list-style: none;
  text-decoration: underline;

  &--details {
    width: auto;
  }

  &--expander {
    width: 100%;
  }

  &:hover {
    color: $ofh-color-foreground-link-hover;
  }

  &:focus {
    @include ofh-focused-text();
    color: $ofh-color-foreground-link-hover;
  }

  &:hover,
  &:focus {
    .ofh-details__summary-text {
      text-decoration: none;
    }
  }
}

.ofh-details__summary::-webkit-details-marker {
  display: none;
}

.ofh-details__summary-text {
  text-decoration: underline;
}

.ofh-details__summary-icon {
  flex: 0 0 auto;
  line-height: 0;
}

.ofh-details__summary-icon-svg {
  display: block;
}

.ofh-details__summary-icon--details-open,
.ofh-details__summary-icon--expander-open {
  display: none;
}

.ofh-details[open] .ofh-details__summary-icon--details-closed,
.ofh-details[open] .ofh-details__summary-icon--expander-closed {
  display: none;
}

.ofh-details[open] .ofh-details__summary-icon--details-open,
.ofh-details[open] .ofh-details__summary-icon--expander-open {
  display: inline-flex;
}

.ofh-details[open] {
  gap: $ofh-size-8;
}

.ofh-details__text {
  width: 100%;
}

.ofh-details__panel {
  color: $ofh-color-foreground-primary;
}

.ofh-details__panel--details {
  border-left: $ofh-size-4 solid $ofh-color-greyscale-5;
  padding: $ofh-size-16;
  padding-left: 20px;
}

/**
 * Expander variation.
 *
 * 1. When a group of details is used reduce the
 *    margin between them so they sit together.
 */

$expander-border-width: 1px;
$expander-border-bottom-width: $ofh-size-4;
$expander-border-color: $ofh-color-greyscale-5;
$expander-border-hover-color: $ofh-color-greyscale-4;

.ofh-expander {
  background-color: $ofh-color-greyscale-white;
  border: $expander-border-width solid $expander-border-color;
  border-bottom-width: $expander-border-bottom-width;
  padding: $ofh-size-24;

  &:hover {
    border-color: $expander-border-hover-color;
  }

  .ofh-details__summary {
    background-color: $ofh-color-greyscale-white;
    display: flex;
    width: 100%;
  }

  .ofh-details__summary:hover {
    .ofh-details__summary-text {
      color: $ofh-color-foreground-link-hover;
    }
  }

  .ofh-details__text {
    padding-left: $ofh-size-16;
  }

  .ofh-details__panel {
    padding: $ofh-size-24;
  }

  .ofh-details__summary-text {
    flex: 1 1 auto;
  }
}

.ofh-expander[open] {
  border-bottom-width: $expander-border-bottom-width;
  gap: $ofh-size-24;
}

.ofh-expander-group {
  /* [1] */

  > .ofh-details {
    @include ofh-responsive-margin(4, 'bottom');
  }

  @include ofh-responsive-margin(16, 'bottom');
}

.ofh-details + %ofh-heading-lg {
  @include ofh-responsive-padding(16, 'top');
}

